# mcp-chess-server

./: README.md  main.py  pyproject.toml
src/chess/: chess_api.py  server.py
