[project]
name = "mc-build-chess-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp>=1.25.0",
    "mcp-cli>=0.11.1",
    "requests>=2.32.5",
]

[project.scripts]
chess = "chess.server:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tools.setuptools]
package-dir = {"" = "src"}

[tools.setuptools.packages.find]
where = ["src"]